# crysm

./: .gitignore  404.html  README.md  calibration.ipynb  cred_log_parser.py  index.html  justfile  mkdocs.yml  mor.cif  orientation_mapping.ipynb  orientation_mapping.py  pyproject.toml  sitemap.xml  zenodo_to_redp.py
.github/workflows/: docs.yml
docs/: index.md  reference.md
docs/source/: conf.py  index.rst
pets-guide/: README.md  _frames.typ  figure-numbering.typ  installation.typ  introduction.typ  main.typ  pets_bibliography.bib  title.typ  tutorial.typ
pets-guide/figures/: fig-detector-gap.typ  flowchart.typ
pets-guide/images/experiment_6/: fold_to_cell.tif  reciprocal_space.tif
pets-guide/images/rotation_axis/: mor_1_frame_355.png~
reference/: index.html
search/: search_index.json
src/: compare_hkl.py  corrected_to_adsc.py  find_cred_project.py  find_spots_manually.py  main.py  orientation_mapping.py  plot_imgs_w_spots.py  plot_integrate.py  plot_smv_side_by_side.py  plot_spot.py  plot_spot_radial.py  plot_tiff_side_by_side.py  prepare_shelx.py  run_xds.py  zenodo_to_redp.py
src/archive/: plot_rounding_effect.py  subtract_background.py
src/lib/: central_cross_correction_factor.py  mib.py
src/pets/: calibrate_angles.py  camel.py  center_cross_correction.py  create_bs.py  mark_dead_pixels.py  run_shelx.py
typst-guide/: introduction.typ  main.typ
typst-guide/figures/: fig-detector-gap-geometry.typ
typst-guide/images/: supercell.tif
